--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <!-- HEADER -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container">
         <nav class="nav">
           <a class="nav__link" lang="en" href="./index.html" 
@@ -51,16 +51,16 @@
           </ul>
         </nav>
       </div>
-    </header>
+    </header> -->
     <!-- MAIN -->
     <main>
       <!-- HERO -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button data-modal-open type="button" class="button">Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
       <!-- FEATURES -->
       <section class="features">
         <div class="container">
@@ -114,7 +114,7 @@
         </div>
       </section>
       <!-- WORK -->
-      <section class="work">
+      <!-- <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємось</h2>
           <ul class="list work__list">
@@ -131,9 +131,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- TEAM -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="list team__list">
@@ -255,7 +255,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- CLIENTS -->
       <section class="clients">
         <div class="container">
@@ -353,12 +353,12 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-      <div class="backdrop backdrop--is-hidden" data-modal>
+      <!-- <div class="backdrop backdrop--is-hidden" data-modal>
         <div class=" hero-modal-button">
           <button class="backdrop__button" data-modal-close type="button">
-            <svg class="backdrop__icon" width="18" height="18"><use href="./images/icons.svg#closecross"></use></svg></button>
+            <svg class="backdrop__icon" width="18" height="18"><use href="./images/icons.svg#closecross"></use></svg></button> -->
            <!-- FORM -->
-          <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
+          <!-- <p class="form__title">Залиште свої дані, ми вам передзвонимо</p>
           <form class="form">
             <label class="form__label">
               <span class="form__label-name">Ім'я</span>
@@ -395,7 +395,7 @@
             <button type="submit" class="button submit-button"> Підписатися </button>
           </form>
         </div>
-      </div>
+      </div> -->
     
     <script src="./js/modal.js"></script>
   </body>
