--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
               </svg>
             </button>
 
-         
           <ul class="list nav-list">
             <li class="nav-list__item"><a class="nav-list__link nav-list__link--active" href="">Студія</a></li>
             <li class="nav-list__item"><a class="nav-list__link" href="./portfolio.html">Портфоліо</a></li>
@@ -456,10 +455,10 @@
       
         <ul class="mobile-menu list">
           <li class="mobile-menu-item">
-            <a class="mobile-menu-link current" href="">Студія</a>
+            <a class="mobile-menu-link current" href="./index.html">Студія</a>
           </li>
           <li class="mobile-menu-item">
-            <a class="mobile-menu-link" href="">Портфоліо</a>
+            <a class="mobile-menu-link" href="./portfolio.html">Портфоліо</a>
           </li>
           <li class="mobile-menu-item">
             <a class="mobile-menu-link" href="">Контакти</a>
