HW#8 additional corrections

--- a/index.html
+++ b/index.html
@@ -125,14 +125,27 @@
           <h2 class="work__title">Чим ми займаємось</h2>
           <ul class="list work__list">
             <li class="work__item">
-              <img class="work__image" src="./images/scheme.jpg" alt="людина набирає текст за компютером" width="370" />
+              <picture>
+                <!-- descktop -->
+                <source media="(min-width:1200px)" srcset="./images/works/box_1_sm@1x.jpg 1x, ./images/works/box_1_sm@2x.jpg 2x, ">
+                <img class="work__image" src="./images/works/box_1_sm@1x.jpg" alt="людина набирає текст за компютером" width="370" />
+              </picture>
               <h3 class="work__heading">Десктопні додатки</h3>
             </li>
             <li class="work__item">
-              <img class="work__image" src="./images/phone.jpg" alt="людина перевіряє налаштування в телефоні" width="370"/>
+              <picture>
+                <!-- descktop -->
+                <source media="(min-width:1200px)" srcset="./images/works/box_2_sm@1x.jpg 1x, ./images/works/box_2_sm@2x.jpg 2x, ">
+                <img class="work__image" src="./images/works/box_2_sm@1x.jpg" alt="людина перевіряє налаштування в телефоні" width="370" />
+              </picture>
               <h3 class="work__heading">Мобільні додатки</h3>
             <li class="work__item">
-              <img class="work__image" src="./images/gamma.jpg" alt="людина вибирає колір з палітри" width="370" />
+              <picture>
+                <!-- descktop -->
+                <source media="(min-width:1200px)" srcset="./images/works/box_3_sm@1x.jpg 1x, ./images/works/box_3_sm@2x.jpg 2x, ">
+                <img class="work__image" src="./images/works/box_3_sm@1x.jpg" alt="людина вибирає колір з палітри" width="370" />
+              </picture>
+              
               <h3 class="work__heading">Дизайнерські рішення</h3>
             </li>
           </ul>
