--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
                   <p class="cards-list__text">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати
                   вичерпні відомості про компанію чи приватну особу.</p>
                 </div>
-                <div class="cards-list__border additional-padding">
+                <div class="cards-list__border ">
                   <h2 class="cards-list__heading">Технокряк</h2>
                   <p class="cards-list__paragrah">Веб-сайт</p>
                 </div>
